{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "8453cd42-51e0-4a6a-8fbf-79b51d49f65d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "db79188a-0628-4c75-ba76-3b1ccb7c18ca",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeRed",
                    "type": "Button",
                    "id": "2461fe7b-1dae-4ed4-b8f3-2cfb7b7ddb02",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeGreen",
                    "type": "Button",
                    "id": "728db347-f0f5-4309-b39d-1a3d4e515e40",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeBlue",
                    "type": "Button",
                    "id": "6e1ec77c-27e5-4f2d-9d75-483ed590d216",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "3a7736a7-6c57-4f3c-98b3-b68aa797c4e4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "4ecf9846-a31e-41f6-b74c-404259adf99f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left",
                    "id": "a86729c1-d3da-464d-9ab9-8b9ad03a6351",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "d02bdb8f-48ee-41a2-800f-8274a626d5b3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "87e8bbd5-f08a-4e5f-84e3-0cf43cc899ad",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left",
                    "id": "d248f4c5-97d0-4b75-bb6e-ad88b337e2c7",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "d7167c13-0259-449a-aa7a-53bf51a48a2b",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "81cf164c-0eaf-4cde-a010-48ba3efefd82",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "ChangeBlue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fa17e87-4919-4ae8-b964-fae48d7f30b0",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "ChangeBlue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd9cea83-cf1f-4822-be99-b9b967945ce3",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "ChangeGreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0eff5355-48ac-4f3d-b776-3fe0cd13d5fc",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "ChangeGreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97f1a592-13ed-4971-9785-fabc4807aac9",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "ChangeRed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3aef23c1-33f0-4943-bb98-07018fa1cc2a",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "ChangeRed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da2508be-df53-47c4-bd6e-5f008c365f94",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d530d4f-8c09-4892-9b32-fb717507b45b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}